# Seeding_QDArchive

./: .gitignore  README.md  challenges.md  config.yml  datasources.csv  pyproject.toml  queries.txt  requirements.txt
src/harvester/: cli.py  settings.py
src/harvester/database/: engine.py  export.py
src/harvester/helpers/: licensing.py  log.py
src/harvester/sources/: __init__.py  base.py  dataverse.py  figshare.py  fsd.py  ia.py  loc.py  osf.py
src/harvester/storage/: files.py
tests/: test_basics.py  test_dataverse.py  test_figshare.py  test_fsd.py  test_ia.py  test_loc.py  test_osf.py
